// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With Complex Selectors attribute selectors 1`] = `
<storybook-wrapper>
  <storybook-attribute-selector
    foo="bar"
  >
    <h3>
      Attribute selector
    </h3>
     Selector: storybook-attribute-selector[foo="bar"] 
    <br />
     Generated template: &lt;storybook-attribute-selector foo="bar"&gt;&lt;/storybook-attribute-selector&gt;
  </storybook-attribute-selector>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Complex Selectors class selectors 1`] = `
<storybook-wrapper>
  <storybook-class-selector
    class="foo"
  >
    <h3>
      Class selector
    </h3>
     Selector: storybook-class-selector.foo,storybook-class-selector.bar 
    <br />
     Generated template: &lt;storybook-class-selector class="foo"&gt;&lt;/storybook-class-selector&gt;
  </storybook-class-selector>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Complex Selectors multiple class selectors 1`] = `
<storybook-wrapper>
  <storybook-button>
    <h3>
      Multiple selector
    </h3>
     Selector: storybook-button,button[foo],[foo].button,button[baz] 
    <br />
     Generated template: &lt;storybook-button&gt;&lt;/storybook-button&gt;
  </storybook-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Complex Selectors multiple selectors 1`] = `
<storybook-wrapper>
  <storybook-multiple-selector>
    <h3>
      Multiple selector
    </h3>
     Selector: storybook-button,button[foo],[foo].button,button[baz] 
    <br />
     Generated template: &lt;storybook-multiple-selector&gt;&lt;/storybook-multiple-selector&gt;
  </storybook-multiple-selector>
</storybook-wrapper>
`;
